frontend/test/should_fail/delretypesame_001b_e.grg
rule r{	-e:Edge->;		alternative {		case1 {						modify {				-f:Edge<e>->;			}		}	}		modify {		delete(e);	}}